# django_docker_template

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
api/: pyproject.toml
api/authentication/: apps.py
api/authentication/migrations/: 0001_initial.py
api/commands/management/commands/: permissions_translate.py  wait_db.py
api/project_name/: settings.py
commands/management/commands/: sucreator.py  wait_db.py
conf/: ep_django.sh  ep_nginx.sh  gunicorn.py
dkr/: dockerfile-api  dockerfile-django-gunicorn  dockerfile-vue
dkr/conf/: ep_certbot.sh  ep_django.sh  ep_nginx.sh  ep_vue.sh  gunicorn.py  nginx.basic.template  nginx.ssl.template
dkr/entrypoints/: api.sh  certbot.sh  nginx.sh  vue.sh
dkr/nginx/: basic.conf
project_name/: settings.py
vue/: .gitignore  README.md  package.json
vue/public/: index.html
