[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Ricardo Cisterna <r.cisternasantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.1"
gunicorn = "^19.9"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==0.12.11"]
build-backend = "poetry.masonry.api"
