[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Ricardo Cisterna <r.cisternasantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
django = "{{ django_version }}"
gunicorn = "^19.9"
psycopg2 = "^2.8"
djangorestframework = "^3.9"
django-cors-headers = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==0.12.16"]
build-backend = "poetry.masonry.api"
